--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,14 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+analyzer:
+  errors:
+    missing_required_param: warning
+    #lines_longer_than_80_chars : warning
+    avoid_relative_lib_imports : warning
+    # treat missing required parameters as a warning (not a hint)
+
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
@@ -22,6 +30,17 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    camel_case_types: true
+    avoid_relative_lib_imports: true
+    annotate_overrides: true
+    empty_statements: true
+    avoid_positional_boolean_parameters: false
+    avoid_classes_with_only_static_members: false
+    await_only_futures: true
+    cancel_subscriptions: true
+    close_sinks: true
+    control_flow_in_finally: true
+    #lines_longer_than_80_chars: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
